Fix: Disable Turbolinks for download links
Turbolinks doesn't play well with `send_data`. Without disable them,
they try to render the attached content instead of downloading it.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -68,3 +68,6 @@ en:
     success:
       creation: Consultation created successfully
       update: Consultation updated successfully
+  certificates:
+    button:
+      download: Download certificate
