--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -68,6 +68,9 @@ es:
     success:
       creation: Consulta creada correctamente
       update: Consulta actualizada correctamente
+  certificates:
+    button:
+      download: Descargar certificado
 
   activerecord:
     errors:
