Export prescriptions as PDF

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,3 +82,6 @@ en:
   certificates:
     button:
       download: Download certificate
+  prescriptions:
+    button:
+      download: Download prescription
