--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,9 +50,13 @@ en:
       instructions: Instructions
     actions:
       edit: Edit
+      destroy: Eliminar
+    destroy:
+      confirm: Are you sure you want to delete it?
     success:
       creation: Medicine created successfully
       update: Medicine updated successfully
+      destroy: Medicine deleted successfully
   diseases:
     button:
       new: New disease
@@ -61,9 +65,13 @@ en:
       name: Name
     actions:
       edit: Edit
+      destroy: Eliminar
+    destroy:
+      confirm: Are you sure you want to delete it?
     success:
       creation: Disease created successfully
       update: Disease updated successfully
+      destroy: Disease destroyed successfully
   anamneses:
     success:
       creation: Anamnesis created successfully
