Display ongoing issue

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,7 @@ en:
     next_appointment: Next Appointment
     miscellaneous: Miscellaneous
     reason: Reason
+    ongoing_issue: Ongoing Issue
     success:
       creation: Consultation created successfully
       update: Consultation updated successfully
