Add users management and update prescriptions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,6 +83,7 @@ en:
     miscellaneous: Miscellaneous
     reason: Reason
     ongoing_issue: Ongoing Issue
+    doctor: Doctor
     success:
       creation: Consultation created successfully
       update: Consultation updated successfully
@@ -97,3 +98,4 @@ en:
   prescriptions:
     button:
       print: Print prescription
+      print_empty: Print empty prescription
