Improve the search experience
- Add pg_search
- Update search interface
- Enable unaccent extension
- Improve normalization strategy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
       previous: "<i class='fa fa-angle-left'></i>"
       next: "<i class='fa fa-angle-right'></i>"
       truncate: "&hellip;"
+    search: Buscar
 
   patients:
     button:
