Edit doctor on consultation

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -109,6 +109,8 @@ es:
         subscription: Indicación
       user:
         registration_acess: Registro
+      consultation:
+        doctor: Médico
     errors:
       messages:
         record_invalid: "La validación falló: %{errors}"
