Add branch offices and consents

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -59,6 +59,22 @@ es:
       creation: Medicina creada correctamente
       update: Medicina actualizada correctamente
       destroy: Medicina eliminada correctamente
+  branch_offices:
+    button:
+      new: Nuevo lugar de atención
+    fields:
+      name: Nombre
+      active: Activo
+      main: Principal
+    actions:
+      edit: Editar
+      destroy: Eliminar
+    destroy:
+      confirm: ¿Está seguro de eliminar este registro?
+    success:
+      creation: Lugar de atención creado correctamente
+      update: Lugar de atención actualizado correctamente
+      destroy: Lugar de atención eliminado correctamente
   diseases:
     button:
       new: Nueva enfermedad
@@ -85,6 +101,7 @@ es:
     reason: Motivo
     ongoing_issue: Enfermedad
     doctor: Médico
+    branch_office: Lugar de consulta
     success:
       creation: Consulta creada correctamente
       update: Consulta actualizada correctamente
