--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,7 +42,6 @@ en:
       update: Patient updated successfully
     special:
       remove:
-        success: Are you sure to remove the special patient?
         success: Special patient successfully removed
   medicines:
     button:
@@ -52,13 +51,29 @@ en:
       instructions: Instructions
     actions:
       edit: Edit
-      destroy: Eliminar
+      destroy: Delete
     destroy:
       confirm: Are you sure you want to delete it?
     success:
       creation: Medicine created successfully
       update: Medicine updated successfully
       destroy: Medicine deleted successfully
+  branch_offices:
+    button:
+      new: New branch office
+    fields:
+      name: Name
+      active: Active
+      main: Main
+    actions:
+      edit: Edit
+      destroy: Delete
+    destroy:
+      confirm: Are you sure you want to delete it?
+    success:
+      creation: Branch Office created successfully
+      update: Branch Office updated successfully
+      destroy: Branch Office deleted successfully
   diseases:
     button:
       new: New disease
@@ -85,6 +100,7 @@ en:
     reason: Reason
     ongoing_issue: Ongoing Issue
     doctor: Doctor
+    branch_office: Branch Office
     success:
       creation: Consultation created successfully
       update: Consultation updated successfully
