Add consents to Hippocrates

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -116,6 +116,9 @@ en:
   certificates:
     button:
       download: Download certificate
+  consents:
+    button:
+      download: Download consent
   prescriptions:
     button:
       print: Print prescription
