Add pending payments to the consultations screen

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,6 +110,7 @@ en:
     ongoing_issue: Ongoing Issue
     doctor: Doctor
     branch_office: Branch Office
+    pending_payment: Pending payment
     actions:
       edit: Edit
       destroy: Delete
