Prevent consultations without value if user is a doctor

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
+---
 en:
   helpers:
     page_entries_info:
@@ -132,3 +133,11 @@ en:
     button:
       print: Print prescription
       print_empty: Print empty prescription
+
+  activerecord:
+    errors:
+      models:
+        consultation:
+          attributes:
+            payment:
+              greater_than_zero: Payment must be greater than zero
